# byteme

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: BufferedReader_8hpp.html  BufferedReader_8hpp_source.html  BufferedWriter_8hpp.html  BufferedWriter_8hpp_source.html  ChunkedBufferReader_8hpp.html  ChunkedBufferReader_8hpp_source.html  Doxyfile  GzipFileReader_8hpp.html  GzipFileReader_8hpp_source.html  GzipFileWriter_8hpp.html  GzipFileWriter_8hpp_source.html  IstreamReader_8hpp.html  IstreamReader_8hpp_source.html  OstreamWriter_8hpp.html  OstreamWriter_8hpp_source.html  PerByte_8hpp.html  PerByte_8hpp_source.html  RawBufferReader_8hpp.html  RawBufferReader_8hpp_source.html  RawBufferWriter_8hpp.html  RawBufferWriter_8hpp_source.html  RawFileReader_8hpp.html  RawFileReader_8hpp_source.html  RawFileWriter_8hpp.html  RawFileWriter_8hpp_source.html  Reader_8hpp.html  Reader_8hpp_source.html  SomeBufferReader_8hpp.html  SomeBufferReader_8hpp_source.html  SomeFileReader_8hpp.html  SomeFileReader_8hpp_source.html  Writer_8hpp.html  Writer_8hpp_source.html  ZlibBufferReader_8hpp.html  ZlibBufferReader_8hpp_source.html  ZlibBufferWriter_8hpp.html  ZlibBufferWriter_8hpp_source.html  annotated.html  byteme.tag  byteme_8hpp.html  (+200 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  files_9.js  files_a.js  files_b.js  files_c.js  (+28 more)
include/buffin/: parse_gzip_file.hpp  parse_some_file.hpp  parse_text_buffer.hpp  parse_text_file.hpp  parse_zlib_buffer.hpp  temp_file_path.hpp
include/byteme/: BufferedReader.hpp  BufferedWriter.hpp  ChunkedBufferReader.hpp  GzipFileReader.hpp  GzipFileWriter.hpp  IstreamReader.hpp  OstreamWriter.hpp  PerByte.hpp  RawBufferReader.hpp  RawBufferWriter.hpp  RawFileReader.hpp  RawFileWriter.hpp  Reader.hpp  SelfClosingFILE.hpp  SelfClosingGzFile.hpp  SomeBufferReader.hpp  SomeFileReader.hpp  TextFileReader.hpp  Writer.hpp  ZlibBufferReader.hpp  ZlibBufferWriter.hpp  byteme.hpp  check_buffer_size.hpp  magic_numbers.hpp  parse_input_stream.hpp  parse_zlib_buffer.hpp  temp_file_path.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: BufferedReader.cpp  BufferedWriter.cpp  ChunkedBufferReader.cpp  GzipFileReader.cpp  GzipFileWriter.cpp  IstreamReader.cpp  LineReader.h  OstreamWriter.cpp  PerByte.cpp  RawBufferReader.cpp  RawBufferWriter.cpp  RawFileReader.cpp  RawFileWriter.cpp  ZlibBufferReader.cpp  ZlibBufferWriter.cpp  byteme.cpp  parse_gzip_file.cpp  parse_input_stream.cpp  parse_text_buffer.cpp  parse_text_file.cpp  parse_zlib_buffer.cpp  read_lines.h  temp_file_path.h  utils.cpp  utils.h
